--- a/tradenova-frontend/index.html
+++ b/tradenova-frontend/index.html
@@ -1,10 +1,27 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tradenova-frontend</title>
+
+    <title>TradeNova — 트레이딩 훈련 플랫폼</title>
+    <meta
+      name="description"
+      content="TradeNova는 랜덤 차트 기반으로 매수·매도 판단을 훈련하는 트레이딩 연습 플랫폼입니다."
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TradeNova — 트레이딩 훈련 플랫폼" />
+    <meta
+      property="og:description"
+      content="실전 차트로 트레이딩 감각을 키우는 연습 플랫폼"
+    />
+    <meta property="og:image" content="/og.png" />
+    <meta property="og:url" content="https://tradenova.io" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="theme-color" content="#10b981" />
   </head>
   <body>
     <div id="root"></div>
